Desktop Nav fix 1024+
Fixed broken layout for 1024px+ broswers

--- a/css/styles.css
+++ b/css/styles.css
@@ -278,6 +278,10 @@
     .heading {
         width: 33%;
     }
+    
+    .contact {
+        display: block;
+    }
 
     .footerName {
         padding-left:  25px;
